--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
       - run: 
           name: install build deps
           command: |
-              apt update
-              apt install -y libcsv-dev build-essential
+              sudo apt-get update
+              sudo apt-get install -y libcsv-dev build-essential
               zef install --deps-only .
       - run:
           name: test 
