--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ jobs:
       - run: 
           name: install build deps
           command: |
-              sudo apt-get update
-              sudo apt-get install -y libcsv-dev build-essential
+              sudo apt-get install -y libcsv-dev
+              zef build .
               zef install --deps-only .
       - run:
           name: test 
