--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,44 @@
-version: 2
+name: test
+
+on:
+  push:
+    branches:
+      - '*'
+    tags-ignore:
+      - '*'
+  pull_request:
+
 jobs:
-  build:
+  raku:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+        raku-version:
+          - 'latest'
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - checkout
-      - run: 
-          name: install build deps
-          command: |
+      - uses: actions/checkout@v2
+      - uses: Raku/setup-raku@v1
+        with:
+          raku-version: ${{ matrix.raku-version }}
+
+
+      - name: Install Dependencies
+        run: zef install --/test --test-depends --deps-only .
+      - name: Install App::Prove6
+        run: zef install --/test App::Prove6
+      - name: Run Tests
+        run: prove6 -I. t
+
+      - name: install build deps
+        run: |
               sudo apt-get install -y libcsv-dev
               zef build .
               zef install --deps-only .
-      - run:
-          name: test 
-          command: |
+      - name: test
+        run:  |
               zef test .
